# CurrencyCalculator

./: .gitignore  CMakeLists.txt
src/: app.cpp
src/impl/: Currency.cpp  Currency.hpp  CurrencyCalculator.hpp  CurrencyCollection.cpp  CurrencyCollection.hpp  DataParser.cpp  DataParser.hpp  DataProvider.cpp  DataProvider.hpp  Exchanger.cpp  Exchanger.hpp
src/intf/: ICurrency.hpp  ICurrencyCalculator.hpp  ICurrencyCollection.hpp  IDataProvider.hpp  IExchanger.hpp
